--- a/src/app/Books/book-list/book-list.component.scss
+++ b/src/app/Books/book-list/book-list.component.scss
@@ -82,7 +82,9 @@
 
 .superContainer .box:hover .name {
     top: 40px;
-    opacity: 1;
+    opacity: 0.85;
+    background: #333;
+    border-radius: 30px;
 }
 
 .superContainer .box .buy {
