finishing home section and custom scrollbar and popup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,23 @@
 <app-navbar></app-navbar>
 
+<div class="popup">
+    <div class="contentBox">
+        <div class="close"></div>
+        <div class="imgBx">
+            <img src="../assets/github.png" alt="">
+        </div>
+
+        <div class="content">
+            <div>
+                <h3>¿Te gusta mi proyecto?</h3>
+                <h2>Git<span>Hub</span></h2>
+                <p>Visita mi GitHub para ver todo el código y más!</p>
+                <a href="https://github.com/Royal6969/Biblioteca_v2-Angular_School_Project" target="_blank">Go to GitHub</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <router-outlet></router-outlet>
 
 <app-footer></app-footer>
