--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -34,7 +34,7 @@
 <div class="body2">
 	<section class="section2">
 		<span class="curve">
-			<img class="img2" src="../../../assets/altair-2-2.png" alt=""> <!-- aquí tengo que poner el recorte semicircular de la parte de abajo de la foto que pongo como background del section -->
+			<img class="img2" src="../../../assets/altair-curva.png" alt=""> <!-- aquí tengo que poner el recorte semicircular de la parte de abajo de la foto que pongo como background del section -->
 		</span>
 	</section>
 </div>
@@ -91,7 +91,7 @@
 	<h2>Por mí y por todos mis compañeros</h2>
 	<br>
 	<p>
-		Al igual que cuando era niño y llegaba a la meta ... pero ahora de adulto, quisiera volver a decirlo.
+		Al igual que cuando era niño y llegaba a la meta ... ahora de adulto, quisiera volver a decirlo.
 		<br>
 		¡ Por mí y por todos mis compañeros !
 		<br><br>
