--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,3 +150,19 @@ body {
     transition: all 0.1s ease;
 }
 */
+
+/*************** Custom ScrollBar ****************/
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(transparent, #30ff00);
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(transparent, #00c6ff);
+
+}
