--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -58,6 +58,8 @@
 		<b>AddBook & EditBook</b>: Desde mi experiencia y opinión personal, el mejor CSS para formularios de todo 2021 (y si me apuras, hasta la fecha de hoy también sigue siendo el mejor). Su efecto para desplegar hacia arriba el background de los inputs es algo sin precedenetes. Incluso su técnica de codificado en CSS deja sorprendido a más de algún programador senior ...
 		<br>
 		<b>Bookings-List</b>: Al igual que el formulario del que veníamos hablando, esta lista también tiene su diseño basado en la temática más popular que hubo en 2021 ... la temática "Glassmorphism". Una vez más, combinando el glassmorphism con un fondo oscuro y una fuente de letra clara, acompañado de un efecto "hover", conseguimos esta gran sutileza futurística, esta vez, en una lista.
+		<br>
+		<b>Extras</b>: Los iconos del Navbar proceden de Material Icons de Google, y a la derecha de esta barra de navegación podemos encontrar un botón tipo "toggle" el cual activa/descativa el modo claro/oscuro de la web.<br>El ScrollBar se ha customizado con el uso del pseudo-elemento de CSS, "webkit-scrollbar", el cual es un framework portable (motor de renderizado) propio de los navegadores Safari y Chrome.
 	</p>
 </div>
 
@@ -87,7 +89,7 @@
 	</section>
 </div>
 
-<div class="sec" id="sec">
+<div class="sec" id="last-sec">
 	<h2>Por mí y por todos mis compañeros</h2>
 	<br>
 	<p>
