--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,28 +10,28 @@
 
     <ul class="social_icon">
         <li>
-            <a href="#">
+            <a [routerLink]="['/inicio']">
                 <span class="icon material-icons">
                     home
                 </span>
             </a>
         </li>
         <li>
-            <a href="#">
+            <a [routerLink]="['/book-list']">
                 <span class="icon material-icons">
                     menu_book
                 </span>
             </a>
         </li>
         <li>
-            <a href="#">
+            <a [routerLink]="['/clientes-v2']">
                 <span class="icon material-icons">
                     people
                 </span>
             </a>
         </li>
         <li>
-            <a href="#">
+            <a [routerLink]="['/lista-prestamos']">
                 <span class="icon material-icons">
                     handshake
                 </span>
@@ -40,10 +40,10 @@
     </ul>
 
     <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Book List</a></li>
-        <li><a href="#">Customers</a></li>
-        <li><a href="#">Bookings</a></li>
+        <li><a [routerLink]="['/inicio']">Home</a></li>
+        <li><a [routerLink]="['/book-list']">Book List</a></li>
+        <li><a [routerLink]="['/clientes-v2']">Customers</a></li>
+        <li><a [routerLink]="['/lista-prestamos']">Bookings</a></li>
     </ul>
 
     <p>©2022 Sergio Díaz | All Rights Reserved</p>
