--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -59,7 +59,7 @@
 		<br>
 		<b>Bookings-List</b>: Al igual que el formulario del que veníamos hablando, esta lista también tiene su diseño basado en la temática más popular que hubo en 2021 ... la temática "Glassmorphism". Una vez más, combinando el glassmorphism con un fondo oscuro y una fuente de letra clara, acompañado de un efecto "hover", conseguimos esta gran sutileza futurística, esta vez, en una lista.
 		<br>
-		<b>Extras</b>: Los iconos del Navbar proceden de Material Icons de Google, y a la derecha de esta barra de navegación podemos encontrar un botón tipo "toggle" el cual activa/descativa el modo claro/oscuro de la web.<br>El ScrollBar se ha customizado con el uso del pseudo-elemento de CSS, "webkit-scrollbar", el cual es un framework portable (motor de renderizado) propio de los navegadores Safari y Chrome.
+		<b>Extras</b>: Los iconos del Navbar proceden de Material Icons de Google, y a la derecha de esta barra de navegación podemos encontrar un botón tipo "toggle" el cual activa/descativa el modo claro/oscuro de la web.<br>El ScrollBar se ha customizado con el uso del pseudo-elemento de CSS, "webkit-scrollbar", el cual es un framework portable (motor de renderizado) propio de los navegadores Safari y Chrome.<br>Por último, he añadido un PopUp de tipo informativo que aparecerá al transcurrir 2 minutos y medio tras el inicio de la conexión a la web.
 	</p>
 </div>
 
